# fooddo

./: .gitignore  README.md  passdb-conn.rs  settings.gradle
app/: build.gradle
app/src/allergen/: Allergen.java  Test.java
app/src/androidTest/java/com/example/fooddo/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/fooddo/: MainActivity.kt
app/src/main/java/com/example/fooddo/ui/dashboard/: DashboardFragment.kt  DashboardViewModel.kt
app/src/main/java/com/example/fooddo/ui/home/: HomeFragment.kt  HomeViewModel.kt
app/src/main/java/com/example/fooddo/ui/notifications/: NotificationsFragment.kt  NotificationsViewModel.kt
app/src/main/res/navigation/: mobile_navigation.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/fooddo/: ExampleUnitTest.kt
backend/: README.md  readme.txt  rustc.cpp  smtp.py  verify.py
backend/password-db/: Cargo.toml  info.fdo
backend/password-db/src/: main.rs
gradle/wrapper/: gradle-wrapper.properties
