[package]
name = "password-db"
version = "0.1.0"
edition = "2021"
authors = [
	"John Wolf <jjwolf@noctrl.edu>"
]
include = [
	"src/**/*",
	"Cargo.toml"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1", features = ["derive"]}
serde_json = "*"
tokio = {version = "1", features = ["full"]}
aws-config = "0.8.0"
aws-sdk-dynamodb = "0.8.0"
tokio-stream = "*"
